# ROS2-with-Rust-Projects

./: .gitignore
Autonomous_Simulator_Projects/001_automotive_software_simulator/: README.md  launch.sh  launch.zsh
Autonomous_Simulator_Projects/001_automotive_software_simulator/resources/csv/evaluation_lane/: Lane_0.csv
Autonomous_Simulator_Projects/001_automotive_software_simulator/resources/csv/simulation_lane/: Lane_0.csv  Lane_2.csv
Autonomous_Simulator_Projects/001_automotive_software_simulator/resources/rviz/: ros2_practice.rviz
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/autonomous_driving/: package.xml
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/autonomous_driving/include/: autonomous_driving.hpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/autonomous_driving/src/: autonomous_driving.cpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/evaluation/: CMakeLists.txt  package.xml
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/evaluation/include/: evaluation_algorithm.hpp  evaluation_node.hpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/evaluation/launch/: evaluation.launch.xml
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/evaluation/src/: evaluation_algorithm.cpp  evaluation_node.cpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/: CMakeLists.txt
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/include/display/: display_node.hpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/include/lane_detection/: lane_detection_algorithm.hpp  lane_detection_node.hpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/include/vehicle/: vehicle_simulator_node.hpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/launch/: simulation.launch.xml
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/app/simulator/src/lane_detection/: lane_detection_algorithm.cpp  lane_detection_node.cpp
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/rte/msg/ad_msgs/: CMakeLists.txt
Autonomous_Simulator_Projects/001_automotive_software_simulator/src/rte/msg/ad_msgs/msg/: VehicleOutput.msg
Autonomous_Simulator_Projects/002_automotive_software_lon/: README.md  launch.sh  launch.zsh
Autonomous_Simulator_Projects/002_automotive_software_lon/resources/csv/evaluation_lane/: Lane_2.csv
Autonomous_Simulator_Projects/002_automotive_software_lon/resources/csv/simulation_lane/: Lane_1.csv  Lane_3.csv
Autonomous_Simulator_Projects/002_automotive_software_lon/resources/rviz/: ros2_practice.rviz
Autonomous_Simulator_Projects/002_automotive_software_lon/src/app/simulator/: CMakeLists.txt  package.xml
Autonomous_Simulator_Projects/002_automotive_software_lon/src/app/speed_limiter/: CMakeLists.txt  package.xml
Autonomous_Simulator_Projects/002_automotive_software_lon/src/app/speed_limiter/include/: speed_limiter_algorithm.hpp  speed_limiter_node.hpp
Autonomous_Simulator_Projects/002_automotive_software_lon/src/app/speed_limiter/launch/: speed_limiter.launch.xml
Autonomous_Simulator_Projects/002_automotive_software_lon/src/app/speed_limiter/src/: speed_limiter_algorithm.cpp  speed_limiter_node.cpp
Autonomous_Simulator_Projects/003_automotive_software_lat/: launch.sh  launch.zsh
Autonomous_Simulator_Projects/003_automotive_software_lat/resources/csv/evaluation_lane/: Lane_1.csv
Autonomous_Simulator_Projects/003_automotive_software_lat/resources/rviz/: ros2_practice.rviz
Autonomous_Simulator_Projects/003_automotive_software_lat/src/app/autonomous_driving/: CMakeLists.txt
Autonomous_Simulator_Projects/003_automotive_software_lat/src/app/autonomous_driving/include/: autonomous_driving.hpp
Autonomous_Simulator_Projects/003_automotive_software_lat/src/app/autonomous_driving/launch/: manual_driving.launch.xml
Autonomous_Simulator_Projects/003_automotive_software_lat/src/app/autonomous_driving/scripts/: simultaneous_inputs.py
Autonomous_Simulator_Projects/003_automotive_software_lat/src/app/autonomous_driving/src/: autonomous_driving.cpp
Autonomous_Simulator_Projects/003_automotive_software_lat/src/rte/msg/ad_msgs/: package.xml
Autonomous_Simulator_Projects/003_automotive_software_lat/src/rte/msg/ad_msgs/msg/: PolyfitLaneDataArray.msg  VehicleInput.msg
References/target-speed/: autonomous_driving.cpp  autonomous_driving.hpp
Turtlesim_Project/ros2_turtle_project_v1/: run_turtle_project.sh  run_turtle_project.zsh
Turtlesim_Project/ros2_turtle_project_v1/rosbag/rosbag2_2024_10_07-21_41_45/: metadata.yaml  rosbag2_2024_10_07-21_41_45_0.db3
Turtlesim_Project/ros2_turtle_project_v1/rosbag/rosbag2_2024_10_07-21_43_41/: metadata.yaml  rosbag2_2024_10_07-21_43_41_0.db3
Turtlesim_Project/ros2_turtle_project_v1/src/turtle_controller/: CMakeLists.txt  package.xml
Turtlesim_Project/ros2_turtle_project_v1/src/turtle_controller/launch/: turtle_project.launch.xml
Turtlesim_Project/ros2_turtle_project_v1/src/turtle_interfaces/: CMakeLists.txt  package.xml
Turtlesim_Project/ros2_turtlesim_project/: run_turtlesim_project.sh  run_turtlesim_project.zsh
Turtlesim_Project/ros2_turtlesim_project/ros2bag/rosbag2_2024_10_08-00_55_44/: metadata.yaml  rosbag2_2024_10_08-00_55_44_0.db3
Turtlesim_Project/ros2_turtlesim_project/src/custom_interfaces/: CMakeLists.txt  package.xml
Turtlesim_Project/ros2_turtlesim_project/src/turtlesim_project/: CMakeLists.txt  package.xml
Turtlesim_Project/ros2_turtlesim_project/src/turtlesim_project/launch/: turtlesim_project.launch.xml
Turtlesim_Project/ros2_turtlesim_project/src/turtlesim_project/src/: color_changer.cpp  hmi.cpp  moving_turtle.cpp  playground.cpp
rust-ros2-ws/: Cargo.toml
rust-ros2-ws/src/: backup0.md  backup1.md  backup3_lanedata.md  backup4_move.md  backup5_straight_line_middle.md
(+22 files in other folders)
