<?xml version="1.0"?>
<package format="3">
  <name>autonomous_driving</name>
    <version>0.0.0</version>
    <description>The autonomous_driving package</description>

    <maintainer email="yuseungna@hanyang.ac.kr">Yuseung Na</maintainer>
    <license>TODO</license>
        
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>ad_msgs</depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>