<?xml version="1.0"?>
<package format="3">
  <name>evaluation</name>
  <version>0.0.0</version>
  <description>The evaluation package</description>

  <maintainer email="yuseungna@hanyang.ac.kr">Yuseung Na</maintainer>
  <license>TODO</license>
      
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ad_msgs</depend>
  <depend>rviz_2d_overlay_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>