<?xml version="1.0"?>
<package format="3">
  <name>ad_msgs</name>
  <version>0.0.0</version>
  <description>The ad_msgs package</description>

  <maintainer email="yuseungna@hanyang.ac.kr">Yuseung.Na</maintainer>
  <license>TODO</license>
      
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>  
  <depend>visualization_msgs</depend>  
  <depend>nav_msgs</depend>  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake </build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
